# sea-orm-actix-web-demo

./: .env  Cargo.toml
entity/: Cargo.toml
entity/src/: post.rs
migration/: Cargo.toml
migration/src/: lib.rs  m20220120_0001_create_post_table.rs  main.rs
socket/: readme.md
socket/src/: main.rs
src/: main.rs
static/css/: skeleton.css  style.css
templates/: edit.html.tera  index.html.tera  layout.html.tera  new.html.tera
templates/error/: 404.html.tera
